--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,10 @@
     "public/lib",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "react": "~0.11.1",
+    "jquery": "~2.1.1",
+    "bootstrap": "~3.2.0"
+  }
 }
