--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "react": "~0.11.1",
     "jquery": "~2.1.1",
     "bootstrap": "~3.2.0",
-    "eventEmitter": "~4.2.7"
+    "eventEmitter": "~4.2.7",
+    "peerjs": "~0.3.9"
   }
 }
