--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "~4.8.4",
-    "peer": "~0.2.6"
+    "peer": "~0.2.6",
+    "socket.io": "~1.0.6"
   }
 }
